# MGraph-AI__Service__LLMs

./: .gitmodules  README.md  pyproject.toml  requirements-test.txt
.github/workflows/: ci-pipeline.yml
docs/: README.md
docs/architecture/: api-endpoints-specification.md  caching-strategy.md  mgraph-ai_service_llms__core-principles-and-architecture.md  model-registry-design.md  provider-integration-guide.md
docs/architecture/implementation/: code-patterns-and-examples.md  (+2 more)
docs/llm-briefs/: technical-briefing__text-analysis-api-for-ui-developers.md  technical-briefing__text-analysis-api.md  technical_briefing__mgraph_ai__service__llms_architecture.md  text-analyzer-mvp__complete_implementation_brief.md
docs/web-mpvs/: 1__ifd__iterative-flow-development_methodology.md  2__tech-architecture-guide.md  3__version-evolution-playbook.md  4__development-workflow-guide.md  4__llm-workflow-templates.md  6__case_study__text_analysis_web_application__one_day_of_flow.md  README.md
mgraph_ai_service_llms/: __init__.py  config.py
mgraph_ai_service_llms/fast_api/: Service__Fast_API.py  lambda_config.py  lambda_handler.py
mgraph_ai_service_llms/schemas/: consts__service_llms.py
mgraph_ai_service_llms/utils/: LocalStack__Setup.py  Version.py
mgraph_ai_service_llms/web-mvps/: index.html
scripts/: release-script-v1.0.0.sh  rename-service.sh  run-locally.sh  setup-from-template.sh  update-version.sh
tests/deploy_aws/: test_Deploy__Service__base.py  test_Deploy__Service__to__dev.py
tests/unit/: Service__Fast_API__Test_Objs.py  test_config.py  test_data.py
(+122 files in other folders)
