[tool.poetry]
name        = "mgraph_ai_service_llms"
version     = "v0.6.24"
description = "MGraph-AI__Service__LLMs"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "Apache 2.0"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/MGraph-AI__Service__LLMs"
repository  = "https://github.com/the-cyber-boardroom/MGraph-AI__Service__LLMs"

[tool.poetry.dependencies]
python                     = "^3.12"
osbot-fast-api-serverless  = "*"
osbot_local_stack          = "*"
memory-fs                  = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"